# tap

./: .gitignore  CLAUDE.md  TODO.md  ansi-display-amendment.md  ansi-yaml-output-amendment.md  bats.nix  flake.nix  justfile  locale-formatting-amendment.md  package.toml  streamed-output-amendment.md  subtest-yaml-rewriting-amendment.md  sweatfile  treefmt.nix  tty-build-last-line-amendment.md  tty-build-tail-viewport-amendment.md  version.env
bash/: load.bash
bash/src/: run.bash
doc/: tap-ndjson.7.scd
docs/features/: 0001-tty-viewport.md
docs/plans/: 2026-05-12-tap-format-ndjson-design.md  2026-05-12-tap-format-ndjson-implementation.md  2026-06-07-rust-ndjson-producer-design.md  2026-06-07-rust-ndjson-producer.md
docs/rfcs/: 0001-test-result-ndjson-schema.md
go/: cargotest.go  cargotest_test.go  classify.go  classify_test.go  diagnostic.go  execparallel.go  execparallel_test.go  go.mod  go.sum  gomod.nix  gomod2nix.toml  gotest.go  gotest_test.go  integration_test.go  operation_writer.go  operation_writer_test.go  parse.go  reader.go  reader_test.go  reformat.go  reformat_test.go  replay.go  replay_test.go  tap.go  tap_test.go
go/cmd/tap-dancer/: main.go
go/pkgs/cargotest/: main.go
go/pkgs/classify/: main.go
go/pkgs/diagnostic/: main.go
go/pkgs/exec_parallel/: main.go
go/pkgs/execparallel/: main.go
go/pkgs/gotest/: main.go
rust/: Cargo.toml
rust/src/: lib.rs  ndjson.rs  reporter.rs
skills/tap14/: SKILL.md
zz-tests_bats/: common.bash  exec_parallel.bats  format_ndjson.bats  justfile  tap_dancer_bash.bats  test_runners_ndjson.bats
(+39 files in other folders)
