[package]
name = "tap-dancer"
version = "0.1.14"
edition = "2024"
description = "TAP-14 writer library"

[dependencies]
icu_decimal = "2"
icu_locale_core = "2"
fixed_decimal = "0.7"
# NdjsonWriter (tap-ndjson(7) producer): record structs derive Serialize;
# diagnostics are serde_json::Value so ints stay ints on the wire.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
